BusOne/src/objects/Inventory_Order_Allocation_vod__c.object
<CustomObject>
    <description>A date effective limit placed by the company on the quantity of a particular product (sample or promo item) that can be ordered by a particular user (or user group) within a particular timeframe</description>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When unchecked, indicates that this record is not currently active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allocation_End_Date_vod__c</fullName>
        <description>This date reflects the last day that this allocation record is in available for selection during order entry.</description>
        <label>Allocation End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allocation_Start_Date_vod__c</fullName>
        <description>This date reflects the first date this order allocation quantity is available for selection during order entry.</description>
        <label>Allocation Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allow_Date_Exceptions_vod__c</fullName>
        <description>Indicates the appropriate actions when a user attempts to submit an order outside of the order dates for the current allocation.</description>
        <label>Allow Date Exceptions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prevent_vod</fullName>
                </value>
                <value>
                    <fullName>Warn_vod</fullName>
                </value>
                <value>
                    <fullName>Require_Approval_vod</fullName>
                </value>
                <value>
                    <fullName>DoNothing_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allow_Quantity_Exceptions_vod__c</fullName>
        <description>Indicates the appropriate actions when a user attempts to submit an order for a quantity that exceeds their current allocation.</description>
        <label>Allow Quantity Exceptions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prevent_vod</fullName>
                </value>
                <value>
                    <fullName>Warn_vod</fullName>
                </value>
                <value>
                    <fullName>Require_Approval_vod</fullName>
                </value>
                <value>
                    <fullName>DoNothing_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Customer-defined description or comment for the Order Allocation Record.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID allows customers to externally reference an ID that can assist in data loading.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Single_Order_Quantity_vod__c</fullName>
        <description>The minimum quantity that can be ordered in a single order against this order allotment.</description>
        <label>Minimum Single Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_End_Date_vod__c</fullName>
        <description>The first date in which orders can begin to be submitted against this allocation.</description>
        <label>Order End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Start_Date_vod__c</fullName>
        <description>The last date in which orders can begin to be submitted against this allocation.</description>
        <label>Order Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Allocation_Id_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the parent (manager’s) allocation of the current  (user’s) allocation.</description>
        <label>Parent Allocation Id</label>
        <referenceTo>Inventory_Order_Allocation_vod__c</referenceTo>
        <relationshipLabel>Inventory Order Allocations</relationshipLabel>
        <relationshipName>Inventory_Order_Allocations_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Order_Allocation_Quantity_vod__c</fullName>
        <description>The maximum quantity that can be ordered across all orders the allotment duration.</description>
        <label>Inventory Order Allocation Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product ID for which the order allocation applies; 18 digit Salesforce.com ID</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Inventory Order Allocations</relationshipLabel>
        <relationshipName>Product_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Order_Fulfilled_Quantity_vod__c</fullName>
        <description>This field represents the sum of the fulfilled quantity from all order lines that match this user, product, and allocation record.</description>
        <label>Total Ordered Quantity</label>
        <summarizedField>Inventory_Order_Line_vod__c.Order_Fulfilled_Quantity_vod__c</summarizedField>
        <summaryForeignKey>Inventory_Order_Line_vod__c.Inventory_Order_Allocation_vod__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User_Allocation_Group_vod__c</fullName>
        <description>Is used to match to the User Record new field for UserGroupAttribute. If the allocation field matches the user&apos;s allocation field, this allocation record applies to that user.</description>
        <label>User Allocation Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User ID for which the order allocation applies; 18 digit Salesforce.com ID.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inventory_Order_Allocations_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inventory Order Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inventory Order Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Order Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VEEVA_DATES_MISMATCH_CHECK</fullName>
        <active>true</active>
        <description>This validation rule ensures that the Start Date always falls before the End Date.</description>
        <errorConditionFormula>Allocation_Start_Date_vod__c &gt; Allocation_End_Date_vod__c || Order_Start_Date_vod__c &gt; Order_End_Date_vod__c</errorConditionFormula>
        <errorMessage>Start date cannot be after end date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VEEVA_MINIMUM_ORDER_CHECK</fullName>
        <active>true</active>
        <description>This rule enforces that the minimum order is not greater than the allocation quantity.</description>
        <errorConditionFormula>Minimum_Single_Order_Quantity_vod__c &gt; Product_Order_Allocation_Quantity_vod__c</errorConditionFormula>
        <errorMessage>Minimum order quantity cannot be greater than the allocation quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VEEVA_ORDER_DATES_CHECK</fullName>
        <active>true</active>
        <description>This validation rule enforces Order Dates falling within the Allocation Dates.</description>
        <errorConditionFormula>Order_Start_Date_vod__c &lt; Allocation_Start_Date_vod__c || Order_End_Date_vod__c &gt; Allocation_End_Date_vod__c</errorConditionFormula>
        <errorMessage>Order Dates must fall within Allocation Dates</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VEEVA_QUANTITIES_CHECK</fullName>
        <active>true</active>
        <description>This rule enforces that the allocation quantity or minimum order quantity are positive numbers.</description>
        <errorConditionFormula>Product_Order_Allocation_Quantity_vod__c &lt; 0 || Minimum_Single_Order_Quantity_vod__c &lt; 0</errorConditionFormula>
        <errorMessage>Quantity cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VEEVA_QUANTITY_FULFILLED_CHECK</fullName>
        <active>true</active>
        <description>This validation rule ensures that the allocation quantity cannot be less than the fulfilled quantity.</description>
        <errorConditionFormula>ISPICKVAL(Allow_Quantity_Exceptions_vod__c, &apos;Prevent_vod&apos;)  &amp;&amp; Product_Order_Allocation_Quantity_vod__c &lt; Total_Order_Fulfilled_Quantity_vod__c</errorConditionFormula>
        <errorMessage>Allocation quantity cannot be less than the fulfilled quantity.</errorMessage>
    </validationRules>
</CustomObject>